--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,6 @@ import Layout from "../layouts/Layout.astro"
   </main>
   <footer>
     The source code is available on
-    <a href="https://github.com/kantuni/kantuni.am" target="_blank">GitHub</a>.
+    <a href="https://github.com/kantuni/blog" target="_blank">GitHub</a>.
   </footer>
 </Layout>
