Use a <p> for the text in the footer

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,11 @@ import "@picocss/pico/css/pico.blue.min.css"
         --pico-font-size: 100%;
       }
 
+      header p:last-child,
+      footer p:last-child {
+        margin-bottom: 0;
+      }
+
       hgroup > h2 {
         margin-bottom: 0.25rem;
       }
