--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,7 @@ import "@picocss/pico/css/pico.blue.min.css"
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="Henrikh's space on the Internet" />
     <title>kantuni.am</title>
     <style is:global>
       :root {
