--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,8 +23,13 @@ import "@picocss/pico/css/pico.blue.min.css"
         margin-bottom: 0.25rem;
       }
     </style>
+    <script
+      is:inline
+      src="https://sdk.feedback.one/v0/core.min.js"
+      data-project-id="01946198-cc19-7573-90bf-71c476fcf3aa"
+      defer></script>
   </head>
-  <body class="container">
-    <slot />
-  </body>
 </html>
+<body class="container">
+  <slot />
+</body>
