Update Astro from 5.1.1 to 5.8.0 and add a new book

--- a/src/components/Books.astro
+++ b/src/components/Books.astro
@@ -9,6 +9,12 @@ type Book = {
 const books: Book[] = [
   {
     title:
+      "The Mom Test: How to talk to customers & learn if your business is a good idea when everyone is lying to you",
+    author: "Rob Fitzpatrick",
+    url: "https://www.goodreads.com/book/show/52283963-the-mom-test",
+  },
+  {
+    title:
       "Atomic Habits: An Easy & Proven Way to Build Good Habits & Break Bad Ones",
     author: "James Clear",
     url: "https://www.goodreads.com/book/show/40121378-atomic-habits",
