--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,8 @@ import Layout from "../layouts/Layout.astro"
   <footer>
     <p>
       The source code is available on
-      <a href="https://github.com/kantuni/kantuni.am" target="_blank">GitHub</a>.
+      <a href="https://github.com/kantuni/kantuni.am" target="_blank">GitHub</a
+      >.
     </p>
   </footer>
 </Layout>
